<resources>
    <string name="app_name">Agende</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    //String Menu options
    <string name="option_menu_config">Configurações</string>
    <string name="option_menu_logout">Sair</string>

    //Strings Id's mobile navigation
    //Strings Menu de gaveta
    <string name="menu_home_label">Home</string>
    <string name="menu_categoria_label">Categoria</string>
    <string name="menu_calendario_label">Calendário</string>
    <string name="menu_metas_label">Dados</string>
    <string name="menu_config_label">Configurações</string>
    //Strings ConfigNavigation
    <string name="config_visual_label">Visual e aparência</string>

    //Strings NavCriarTarefa e NavCategory - Select Categoria
    <string-array name="categorias">
        <item>Estudantil</item>
        <item>Doméstico</item>
        <item>Outro</item>
    </string-array>

    //Strings NavConfigure
    <string name="configure_nav_geral">Geral</string>
    <string name="configure_nav_sobre"> Sobre</string>
    <string name="configure_nav_contato"> Entre em contato</string>
    <string name="configure_nav_notify"> Notificações</string>
    <string name="configure_nav_visual"> Visual e aparência</string>

    //Strings e Alertas
    Alerta
    <string name="alerta_cancelar">Cancelar</string>
    <string name="alerta_selecionar">Selecionar</string>
    Sobre
    <string name="alerta_fechar">Fechar</string>
    <string name="configure_alerta_nav_sobre_info_title"> Ajuda e feedback</string>
    <string name="configure_nav_sobre_info">
        <h1>Agende Tarefa 1.0</h1>\n
        Sua própria agenda de tarefas.\n
        Gerêncie facilmente suas ações,\n
        temas e atendimento.\n
        Desenvolvido por Hiago e Jarbas.\n
        Relatar erros e pedir novas\n
        funcionalidaes:\n
        agende.senac@gmail.com</string>
    Visual
    <string name="configure_alerta_visual_info_title"> Você quer aplicar este tema?</string>
    <string name="configure_alerta_visual_info">O aplicativo pode fechar ou reiniciar</string>
    <string name="configure_visual_primary_theme">Padrão</string>
    <string name="configure_visual_secondary_theme">Laranja</string>
    <string name="configure_visual_tertiary_theme">Verde</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">New fragment</string>
</resources>