<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NavConfig">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/configureTextGeral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_menu_config"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/configure_nav_geral"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ConfigureTextNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_config_notify"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/configure_nav_notify"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/configureTextVisual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_config_visual"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/configure_nav_visual"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/configureTextContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_config_contato"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/configure_nav_contato"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/configureTextSobre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_config_sobre"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/configure_nav_sobre"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>